Changes for 1.6.1

 - [ZBX-542] added processing of nextcheck for active checks (Sasha)
 - [ZBX-504] fixed date selector issue for log items in latest values screen (Artem)
 - [ZBX-529] removed links from dynamic screen graphs (Artem)
 - [ZBX-538] fixed wrong theme pick up in login screen issue (Artem)
 - [ZBX-536] fixed problem with "Unable to add performance counter" (Sasha)
 - [ZBX-535] added support of monitoring files larger than 2GB in windows (Sasha)
 - [ZBX-520] removed action condition "event ack" due to not supported (Artem)
 - [ZBX-480] fixed patches for sysmaps_links table (Sasha)
 - [ZBX-521] fixed problem in FreeBSD with threads in proc.num and proc.mem items (Sasha)
 - [DEV-238] added support of sec|#num for function count() (Sasha)
 - [DEV-238] added support of text items for function count() (Sasha)
 - [ZBX-471] fixed problem with graphs with big values (Artem)
 - [ZBX-501] fixed undefined values in server info screen (Artem)
 - [ZBX-469] fixed problem with linking extra graph (Artem)
 - [ZBX-495] fixed DB upgrade script when doing 1.1->1.4->1.6 (Alexei)
 - [ZBX-488] fixed memory leak in ZABBIX server code (Alexei)
 - [ZBX-500] added more debug information for icmpping processing (Sasha)
 - [ZBX-499] fixes problem with IPMI authorization; added field "IPMI IP" (Sasha)
 - [ZBX-484] fixed host-group selection in templates page (Artem)
 - [ZBX-464] fixed user creation under ldap (Artem)
 - [ZBX-468] fixed user online status in administration panel (Artem)
 - [ZBX-492] fixed wrong url "next 100" in audit actions (Artem)
 - [ZBX-490] fixed undefined variable in latest data (Artem)
 - [ZBX-481] fixed permission issue in slideshow (Artem)
 - [ZBX-474] fixed deleting hosts with postgres-backend (Artem)
 - [ZBX-475] added message on missed php-ldap module (Artem)
 - [DEV-168] added support of system.cpu.util[] for OpenBSD agents (Sasha)

Changes for 1.5.5

 - [DEV-211] added support of IPMI (Sasha)
 - [DEV-210] added extended host profile (Artem)